# CELTIC

./: .gitignore  LICENSE  README.md  a.ipynb  pyproject.toml  requirements.txt  setup.py
celtic/celtic_net/: __init__.py  fnet_model.py  fnet_model_3d_from_2d.py  fnetlogger.py  transforms.py
celtic/celtic_net/data/: __init__.py  bufferedpatchdataset.py  customizedtiffdataset.py  fnetdataset.py
celtic/celtic_net/nn_modules/: daft.py  fnet_nn_3d.py  fnet_nn_3d_params.py
celtic/predict/: predict.py  predict_functions.py
celtic/preprocess/: ae.py  context_creator.py
celtic/train/: train.py  train_functions.py
celtic/utils/: functions.py
celtic_net/: __init__.py  fnet_model.py  fnet_model_3d_from_2d.py  transforms.py
celtic_net/data/: __init__.py  bufferedpatchdataset.py  customizedtiffdataset.py  fnetdataset.py
celtic_net/nn_modules/: daft.py  fnet_nn_3d.py  fnet_nn_3d_params.py
data/microtubules/: metadata.csv  test_context.csv  test_images.csv
examples/: context_creation.ipynb  predict.ipynb  train.ipynb
predict/: predict.py  predict_functions.py
preprocess/: context_creator.py
resources/microtubules/: example_files_config.json
resources/microtubules/models/: ae.pth  classic_shape_kmeans.pkl  classic_shape_scaler.pkl  context_model_config.json  ml_shape_kmeans.pkl  ml_shape_pca.pkl
train/: train.py  train_functions.py
utils/: functions.py
