[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["celtic", "celtic.*"]

[project]
name = "celtic"
version = "1.0.0"
description = "Single cell in silico labeling model using tabular input context augmentation."
authors = [
    {name = "Nitsan Elmalam", email = "enitsan8@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7.12"
urls = { homepage = "https://github.com/zaritskylab/CELTIC" }
dependencies = [
    "imagecodecs",
    "matplotlib>=3.5.3",
    "pandas>=1.3.5",
    "tifffile",
    "tqdm>=4.64.1",
    "scikit-learn>=1.6.1,<2.0",
    "numpy>=1.21.5",
    "opencv-python>=4.6.0.66",
    "scipy>=1.5.4",
    "torch>=1.13.1",
    "gdown",
    "ipykernel"
]